# system-software-1

./: CMakeCache.txt  CMakeLists.txt  Makefile  architecture.puml  cmake_install.cmake  departments.h  fork.h  main.c
daemon_tasks/: check_directory.c  daemon_task.h
daemon_tasks/transfer/: backup_files.c  lock_directories.c  transfer.h  transfer_reports.c  transfer_uploads.c  unlock_directories.c
event_logging/: reporting_event.c  reporting_event.h  watch_directory.c  watch_directory.h
ipc/: listen_task_completion.c  log_task.h  log_task_completion.c
signals/: handle_interrupt.c  signal_handlers.h
time/: reporting_time.c  reporting_time.h
